updated header and nav bar with correct spacing and layout

--- a/assets/css/styleportfolio.css
+++ b/assets/css/styleportfolio.css
@@ -1,1 +1,41 @@
 /* remember to add font-family to navbar: 'Lobster' , cursive */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* apply stle to header element */
+header {
+  padding: 20px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+header h1 {
+  font-weight: bold;
+  font-size: 40px;
+  margin: 0;
+  /* add in font family before finishing */
+}
+
+header nav {
+  margin: 10px 0;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+header nav ul li a {
+  margin: 0 30px;
+  border-bottom: 2px solid;
+  padding-bottom: 2px;
+  font-family: "Lobster", cursive;
+}
